etiketler messages.properties'e baglandi

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,12 @@
-lang.language=English
+general.label.name=Name
+general.label.email=Email
+genaral.label.homePage=Home Page
+general.label.aboutMe=About Me
+general.label.news=News
+general.label.lessons=Lessons
+general.label.contact=Contact
+general.label.sendMessage=Send Message
+general.label.clear=Clear
+general.label.siteTitle=Personal Web Site
+general.label.enterYourMessage=Enter your message
+general.label.search=Search
