--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -1,1 +1,12 @@
-lang.language=Turkish
+general.label.name=Ad
+general.label.email=E posta
+genaral.label.homePage=Anasayfa
+general.label.aboutMe=Hakk\u0131mda
+general.label.news=Haberler
+general.label.lessons=Dersler
+general.label.contact=\u0130leti\u015Fim
+general.label.sendMessage=Mesaj Gönder
+general.label.clear=Temizle
+general.label.siteTitle=Ki\u015Fisel Web S\u0130stesi
+general.label.enterYourMessage=Mesaj\u0131n\u0131z\u0131 giriniz
+general.label.search=Arama
