message properties düzenlemesi yapıldı

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,12 +1,42 @@
 general.label.name=Name
 general.label.email=Email
-genaral.label.homePage=Home Page
+general.label.homePage=Home Page
 general.label.aboutMe=About Me
 general.label.news=News
 general.label.lessons=Lessons
 general.label.contact=Contact
 general.label.sendMessage=Send Message
 general.label.clear=Clear
+general.label.save=Save
+general.label.back=Back
 general.label.siteTitle=Personal Web Site
 general.label.enterYourMessage=Enter your message
 general.label.search=Search
+general.label.more=More
+general.label.add=Add
+general.label.list=List
+general.label.edit=Edit
+general.label.inbox=Inbox
+general.label.news=News
+general.label.users=Users
+general.label.categories=Categories
+general.label.logout=Logout
+general.label.login=Login
+general.label.firstName=First Name
+general.label.lastName=Last Name
+general.label.username=User Name
+general.label.password=Password
+general.label.active=Active
+general.label.passive=Passive
+general.label.status=Status
+general.label.action=Action
+general.label.title=Title
+general.label.description=Description
+general.label.author=Author
+general.label.createDate=Create Date
+general.label.selectCategory=Select Category
+general.label.categoryName=Category Name
+
+
+
+
