--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -1,12 +1,46 @@
 general.label.name=Ad
 general.label.email=E posta
-genaral.label.homePage=Anasayfa
+general.label.homePage=Anasayfa
 general.label.aboutMe=Hakk\u0131mda
 general.label.news=Haberler
 general.label.lessons=Dersler
 general.label.contact=\u0130leti\u015Fim
 general.label.sendMessage=Mesaj Gönder
 general.label.clear=Temizle
+general.label.save=Kaydet
+general.label.back=Geri
 general.label.siteTitle=Ki\u015Fisel Web S\u0130stesi
 general.label.enterYourMessage=Mesaj\u0131n\u0131z\u0131 giriniz
 general.label.search=Arama
+general.label.more=Daha Fazla
+general.label.add=Ekle
+general.label.list=Listele
+general.label.edit=Düzenle
+general.label.inbox=Gelen Kutusu
+general.label.news=Haberler
+general.label.users=Kullan\u0131c\u0131lar
+general.label.categories=Kategoriler
+general.label.logout=Ç\u0131k\u0131\u015F
+general.label.login=Giri\u015F
+general.label.firstName=Ad\u0131
+general.label.lastName=Soyad\u0131
+general.label.username=Kullan\u0131c\u0131 Ad\u0131
+general.label.password=Parola
+general.label.active=Aktif
+general.label.passive=Pasif
+general.label.status=Durum
+general.label.action=\u0130\u015Flem
+general.label.title=Ba\u015Fl\u0131k
+general.label.description=Aç\u0131klama
+general.label.author=Yazar
+general.label.createDate=Olu\u015Fturulma Tarihi
+general.label.selectCategory=Kategori Seçiniz
+general.label.categoryName=Kategori Ad\u0131
+
+
+
+
+
+
+
+
