genel title duzenlemesi

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -36,7 +36,13 @@ general.label.author=Author
 general.label.createDate=Create Date
 general.label.selectCategory=Select Category
 general.label.categoryName=Category Name
-
-
-
-
+general.label.lessonList=Lessons List
+general.label.lessonAdd=Lesson Add
+general.label.lessonEdit=Lesson Edit
+general.label.categoryList=Category List
+general.label.categoryAdd=Category Add
+general.label.categoryEdit=Category Edit
+general.label.userEdit=User Edit
+general.label.userAdd=User Add
+general.label.userList=User List
+general.label.newsEdit=News Edit
