--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -36,11 +36,16 @@ general.label.author=Yazar
 general.label.createDate=Olu\u015Fturulma Tarihi
 general.label.selectCategory=Kategori Seçiniz
 general.label.categoryName=Kategori Ad\u0131
-
-
-
-
-
+general.label.lessonList=Dersler Listesi
+general.label.lessonAdd=Ders Ekle
+general.label.lessonEdit=Ders Düzenle
+general.label.categoryList=Kategori Listesi
+general.label.categoryAdd=Kategori Ekle
+general.label.categoryEdit=Kategori Düzenle
+general.label.userEdit=Kullan\u0131c\u0131 Düzenle
+general.label.userAdd=Kullan\u0131c\u0131 Ekle
+general.label.userList=Kullan\u0131c\u0131 Listesi
+general.label.newsEdit=Haber Düzenle
 
 
 
