--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -46,3 +46,4 @@ general.label.userEdit=User Edit
 general.label.userAdd=User Add
 general.label.userList=User List
 general.label.newsEdit=News Edit
+general.label.newsAdd=News Add
