--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -46,6 +46,6 @@ general.label.userEdit=Kullan\u0131c\u0131 Düzenle
 general.label.userAdd=Kullan\u0131c\u0131 Ekle
 general.label.userList=Kullan\u0131c\u0131 Listesi
 general.label.newsEdit=Haber Düzenle
-
+general.label.newsAdd=Haber Ekle
 
 
