yeni title eklendi

--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -9,7 +9,7 @@ general.label.sendMessage=Mesaj Gönder
 general.label.clear=Temizle
 general.label.save=Kaydet
 general.label.back=Geri
-general.label.siteTitle=Ki\u015Fisel Web S\u0130stesi
+general.label.siteTitle=Ki\u015Fisel Web Sitesi
 general.label.enterYourMessage=Mesaj\u0131n\u0131z\u0131 giriniz
 general.label.search=Arama
 general.label.more=Daha Fazla
