main image icin dil secenegi eklendi

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -47,3 +47,4 @@ general.label.userAdd=User Add
 general.label.userList=User List
 general.label.newsEdit=News Edit
 general.label.newsAdd=News Add
+general.label.mainImage=Main Image
