hata sayfaları eklendi

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -48,3 +48,6 @@ general.label.userList=User List
 general.label.newsEdit=News Edit
 general.label.newsAdd=News Add
 general.label.mainImage=Main Image
+general.label.error404=Page Not Found !
+general.label.error403=Forbidden !
+general.label.error500=Server Error !
