--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -48,4 +48,6 @@ general.label.userList=Kullan\u0131c\u0131 Listesi
 general.label.newsEdit=Haber Düzenle
 general.label.newsAdd=Haber Ekle
 general.label.mainImage=Ana Resim
-
+general.label.error404=Sayfa Bulunamad\u0131 !
+general.label.error403=Eri\u015Fim \u0130zni Yok !
+general.label.error500=Sunucu Hatas\u0131
