hardcoded ifadeler duzenlendi

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -51,3 +51,5 @@ general.label.mainImage=Main Image
 general.label.error404=Page Not Found !
 general.label.error403=Forbidden !
 general.label.error500=Server Error !
+general.label.contactMessageSuccess=Your message was successfully sent !
+general.label.contactMessageFailed=Please click checkbox !
