--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -51,3 +51,5 @@ general.label.mainImage=Ana Resim
 general.label.error404=Sayfa Bulunamad\u0131 !
 general.label.error403=Eri\u015Fim \u0130zni Yok !
 general.label.error500=Sunucu Hatas\u0131
+general.label.contactMessageSuccess=Mesaj\u0131n\u0131z ba\u015Far\u0131yla gönderildi !
+general.label.contactMessageFailed=Lütfen onay kutusuna t\u0131klay\u0131n !
